--- a/app/src/main/res/layout/activity_blocly.xml
+++ b/app/src/main/res/layout/activity_blocly.xml
@@ -22,14 +22,12 @@
             android:layout_height="match_parent" />
     </LinearLayout>
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_nav_activity_blocly"
         android:layout_width="280dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
         android:background="?android:windowBackground"
-        android:gravity="center"
-        android:text="Welcome to the Drawer!"
-        android:textSize="32sp" />
+        android:layout_gravity="left"/>
 
 </android.support.v4.widget.DrawerLayout>
 
