--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,14 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <!-- Overflow Menu Button -->
+        <item name="android:actionOverflowButtonStyle">@style/OverflowButton</item>
+    </style>
+
+    <style name="OverflowButton" parent="android:Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_overflow_menu_selector</item>
+        // #4
+        <item name="android:paddingLeft">@dimen/default_padding</item>
     </style>
 
     <style name="DrawerArrow" parent="Base.Widget.AppCompat.DrawerArrowToggle">
@@ -45,7 +53,6 @@
         <item name="android:textSize">14sp</item>
         <item name="robotoFont">Regular</item>
     </style>
-
 
     <style name="Button">
         <item name="android:textColor">@drawable/btn_text_drawable</item>
